[gd_scene load_steps=22 format=3 uid="uid://b0odo6b6genc4"]

[ext_resource type="Texture2D" uid="uid://c7j4gjpjshdj" path="res://Imported Assets/VFX/Dark VFX 01 - 02/Dark VFX 1/Dark VFX 1 (40x32).png" id="1_7a4ty"]
[ext_resource type="Script" path="res://Scenes/Entities/Necromancer/necromancer_minion.gd" id="1_bm7y7"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/NecromancerMinionStateMachine.gd" id="4_i8evo"]
[ext_resource type="Script" path="res://Scenes/Entities/Necromancer/NecromancerMinion/State/NecromancerMinionSeekState.gd" id="5_7gfds"]
[ext_resource type="Script" path="res://Scenes/Entities/Necromancer/NecromancerMinion/State/NecromancerMinionDeathState.gd" id="6_qibr2"]
[ext_resource type="PackedScene" uid="uid://4japi0h1i07l" path="res://Scenes/UI/state_debug_label.tscn" id="7_5bdj1"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/Necromancer Minion/NecromancerMinionHitbox.gd" id="8_lrkpw"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/Necromancer Minion/CollisionShape2D.gd" id="8_pxs72"]
[ext_resource type="PackedScene" uid="uid://cld6xwqay6nub" path="res://Scenes/UI/velocity_debug_label.tscn" id="8_qctqp"]

[sub_resource type="Animation" id="Animation_h78lx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_bhh7s"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_7a4ty")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8rgnl"]
resource_name = "seek"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_7a4ty")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c5hqn"]
_data = {
"RESET": SubResource("Animation_h78lx"),
"death": SubResource("Animation_bhh7s"),
"seek": SubResource("Animation_8rgnl")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ur3nl"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_klgtv"]
animation = &"seek"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yia2k"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jmnxg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7pl40"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_sl1m6"]
states/death/node = SubResource("AnimationNodeAnimation_ur3nl")
states/death/position = Vector2(619.5, 99.875)
states/seek/node = SubResource("AnimationNodeAnimation_klgtv")
states/seek/position = Vector2(362, 99.75)
transitions = ["Start", "seek", SubResource("AnimationNodeStateMachineTransition_yia2k"), "seek", "death", SubResource("AnimationNodeStateMachineTransition_jmnxg"), "death", "End", SubResource("AnimationNodeStateMachineTransition_7pl40")]

[sub_resource type="CircleShape2D" id="CircleShape2D_04f6p"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fus6v"]
radius = 6.0

[node name="NecromancerMinion" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource("1_bm7y7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_c5hqn")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7a4ty")
flip_h = true
hframes = 10
vframes = 2

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_sl1m6")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_04f6p")
disabled = true

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "animation_tree")]
script = ExtResource("4_i8evo")
character = NodePath("..")
current_state = NodePath("NecromancerMinionSeekState")
animation_tree = NodePath("../AnimationTree")

[node name="NecromancerMinionSeekState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("death_state")]
script = ExtResource("5_7gfds")
seek_animation = "seek"
death_state = NodePath("../NecromancerMinionDeathState")
can_fall = false

[node name="NecromancerMinionDeathState" type="Node" parent="CharacterStateMachine"]
script = ExtResource("6_qibr2")
death_animation = "death"
can_move = false
can_change_direction = false
can_fall = false

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="StateDebugLabel" parent="." node_paths=PackedStringArray("state_machine") instance=ExtResource("7_5bdj1")]
offset_left = -58.0
offset_top = -36.0
offset_right = -9.0
offset_bottom = -10.0
state_machine = NodePath("../CharacterStateMachine")
metadata/_edit_use_anchors_ = true

[node name="VelocityDebugLabel" parent="." node_paths=PackedStringArray("player") instance=ExtResource("8_qctqp")]
offset_left = -58.0
offset_top = -52.0
offset_right = 12.0
offset_bottom = -26.0
player = NodePath("..")
metadata/_edit_use_anchors_ = true

[node name="NecromancerMinionHitbox" type="Area2D" parent="." node_paths=PackedStringArray("player", "hitbox")]
collision_layer = 0
collision_mask = 3
script = ExtResource("8_lrkpw")
player = NodePath("..")
hitbox = NodePath("NecromancerMinionHitboxCollision")

[node name="NecromancerMinionHitboxCollision" type="CollisionShape2D" parent="NecromancerMinionHitbox"]
position = Vector2(-3, 0)
shape = SubResource("CircleShape2D_fus6v")
debug_color = Color(0.658824, 0.321569, 1, 0.419608)
script = ExtResource("8_pxs72")

[connection signal="animation_finished" from="AnimationPlayer" to="CharacterStateMachine/NecromancerMinionDeathState" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/NecromancerMinionDeathState" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="DespawnTimer" to="CharacterStateMachine/NecromancerMinionSeekState" method="_on_despawn_timer_timeout"]
[connection signal="body_entered" from="NecromancerMinionHitbox" to="NecromancerMinionHitbox" method="_on_body_entered"]
